network.tf
resource "aws_vpc" "main_vpc" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${local.name_prefix}-vpc-main"
  }
}

resource "aws_subnet" "main_subnet" {
  vpc_id                  = aws_vpc.main_vpc.id
  cidr_block              = "10.0.0.0/24"
  map_public_ip_on_launch = true # TODO: Revisit as this should not be set
  availability_zone       = "${var.aws_region}a"
}

# resource "aws_flow_log" "main" {
#   log_destination = aws_cloudwatch_log_group.vpc_main_cloudwatch_group.arn
#   traffic_type    = "ALL"
#   vpc_id          = aws_vpc.main.id
# }

# resource "aws_cloudwatch_log_group" "vpc_main_cloudwatch_group" {
#   name = "${local.name_prefix}-vpc-cloudwatch-group"
# }

# Create Internet Gateway (IGW) for public subnet to access the internet
resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main_vpc.id
  tags = {
    Name = "MainIGW"
  }
}

# Create Route Table for Public Subnet (so it can route internet traffic via IGW)
resource "aws_route_table" "main_public_route_table" {
  vpc_id = aws_vpc.main_vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main_igw.id
  }
  tags = {
    Name = "PublicRouteTable"
  }
}

# Associate the Public Subnet with the Public Route Table
resource "aws_route_table_association" "main_route_table_public_assoc" {
  subnet_id      = aws_subnet.main_subnet.id
  route_table_id = aws_route_table.main_public_route_table.id
}
